--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - '5432:5432'
     volumes:
       - colmena_lab:/var/lib/postgresql/data
+      - ./src/config/db:/docker-entrypoint-initdb.d
 
 volumes:
   redis:
